# proofball

./: .gitignore  Anchor.toml  README.md  TECHNICAL_DOCUMENTATION.md  get_fixture_data.ts  index.html  package-lock.json  package.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
app/: index.html
docs/: BUILD_PLAN.md  index.html
faucet/: package-lock.json  package.json
faucet/app/api/faucet/: route.ts
programs/proofball/: Cargo.toml
programs/proofball/src/: lib.rs  txline.rs
scripts/: create-markets.ts  data_fixtures_snapshot.json  data_scores_snapshot_18187298.json  data_scores_snapshot_18193785.json  download_idl.sh  settle-market.ts  stat_validation.json  subscribe-txline.ts  txline-session.sh  world-cup-fixtures.json
tests/: proofball.ts
verify/: package-lock.json  package.json  tsconfig.json  verify.ts
