[package]
name = "proofball"
version = "0.1.0"
description = "Parametric prop market settlement on top of TxLINE verified match stats"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofball"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", default-features = false, features = ["token", "token_2022"] }
borsh = "0.10.4"
zeroize = "=1.3.0"
zeroize_derive = "=1.4.2"
blake3 = { version = "=1.5.0", default-features = false }
indexmap = "=2.2.6"
unicode-segmentation = "=1.12.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
blake3 = { version = "=1.5.0", features = ["pure"] }